# Rebon

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/memory/: MEMORY.md  preferences.md  project-rebon.md
data/: brands.json  products.json  strains.json
src/rebon/: config.py
src/rebon/agent/: graph.py  state.py
src/rebon/api/: main.py
src/rebon/db/: chroma.py  ingest.py  query.py
src/rebon/scraper/: enrich_products.py  enrich_strains.py  scrape_products.py
